--- a/package.json
+++ b/package.json
@@ -1,20 +1,36 @@
 {
-  "name": "testv",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
-  },
-  "devDependencies": {
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
-  }
+	"name": "testv",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"next": "12.1.6",
+		"react": "18.1.0",
+		"react-dom": "18.1.0"
+	},
+	"devDependencies": {
+		"eslint": "8.15.0",
+		"eslint-config-next": "12.1.6",
+		"@headlessui/react": "^1.4.3",
+		"@tailwindcss/forms": "^0.4.0",
+		"aws-sdk": "^2.1048.0",
+		"axios": "^0.24.0",
+		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.19.1",
+		"js-cookie": "^3.0.1",
+		"jsonwebtoken": "^8.5.1",
+		"mongodb": "^4.2.2",
+		"mongoose": "^6.1.4",
+		"next": "^12.1.0",
+		"next-auth": "^4.0.6",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"sass": "^1.49.9",
+		"swiper": "^8.0.7"
+	}
 }
