--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
 		"react-dom": "18.1.0"
 	},
 	"devDependencies": {
+		"@aws-cdk/aws-s3": "^1.137.0",
+		"@aws-cdk/core": "1.137.0",
+		"@fortawesome/fontawesome-free": "^5.15.4",
+		"@fortawesome/fontawesome-svg-core": "^1.2.36",
+		"@fortawesome/free-brands-svg-icons": "^5.15.4",
+		"@fortawesome/free-solid-svg-icons": "^5.15.4",
+		"@fortawesome/react-fontawesome": "^0.1.16",
 		"eslint": "8.15.0",
 		"eslint-config-next": "12.1.6",
 		"@headlessui/react": "^1.4.3",
