--- a/package.json
+++ b/package.json
@@ -14,30 +14,21 @@
 		"react-dom": "18.1.0"
 	},
 	"devDependencies": {
-		"@aws-cdk/aws-s3": "^1.137.0",
-		"@aws-cdk/core": "1.137.0",
-		"@fortawesome/fontawesome-free": "^5.15.4",
-		"@fortawesome/fontawesome-svg-core": "^1.2.36",
-		"@fortawesome/free-brands-svg-icons": "^5.15.4",
-		"@fortawesome/free-solid-svg-icons": "^5.15.4",
-		"@fortawesome/react-fontawesome": "^0.1.16",
-		"eslint": "8.15.0",
-		"eslint-config-next": "12.1.6",
-		"@headlessui/react": "^1.4.3",
-		"@tailwindcss/forms": "^0.4.0",
-		"aws-sdk": "^2.1048.0",
-		"axios": "^0.24.0",
-		"bcryptjs": "^2.4.3",
-		"body-parser": "^1.19.1",
-		"js-cookie": "^3.0.1",
-		"jsonwebtoken": "^8.5.1",
-		"mongodb": "^4.2.2",
-		"mongoose": "^6.1.4",
-		"next": "^12.1.0",
-		"next-auth": "^4.0.6",
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
-		"sass": "^1.49.9",
-		"swiper": "^8.0.7"
+		"@types/jsonwebtoken": "^8.5.6",
+		"autoprefixer": "^10.4.4",
+		"aws-cdk": "^2.3.0",
+		"eslint": "8.5.0",
+		"eslint-config-airbnb": "^19.0.2",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-next": "12.0.7",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-import": "^2.25.3",
+		"eslint-plugin-json": "^3.1.0",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-react": "^7.28.0",
+		"postcss": "^8.4.12",
+		"prettier": "^2.5.1",
+		"tailwindcss": "^3.0.23"
 	}
 }
