--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
 	"dependencies": {
 		"@aws-cdk/aws-s3": "^1.137.0",
 		"@aws-cdk/core": "1.137.0",
-	
+		"@fortawesome/fontawesome-free": "^5.15.4",
+		"@fortawesome/fontawesome-svg-core": "^1.2.36",
+		"@fortawesome/free-brands-svg-icons": "^5.15.4",
+		"@fortawesome/free-solid-svg-icons": "^5.15.4",
+		"@fortawesome/react-fontawesome": "^0.1.16",
 		"@headlessui/react": "^1.4.3",
 		"@tailwindcss/forms": "^0.4.0",
 		"aws-sdk": "^2.1048.0",
